crates/mdfx/src/renderer/svg/snapshots/mdfx__renderer__svg__tests__sparkline_empty.snap
---
source: crates/mdfx/src/renderer/svg/mod.rs
expression: render_inline_svg(&primitive)
---
<svg xmlns="http://www.w3.org/2000/svg" width="100" height="20" viewBox="0 0 100 20"></svg>
