crates/mdfx/src/renderer/svg/snapshots/mdfx__renderer__svg__tests__sparkline_flat_data.snap
---
source: crates/mdfx/src/renderer/svg/mod.rs
expression: render_inline_svg(&primitive)
---
<svg xmlns="http://www.w3.org/2000/svg" width="100" height="20" viewBox="0 0 100 20">
  <polyline points="3.0,17.0 26.5,17.0 50.0,17.0 73.5,17.0 97.0,17.0" fill="none" stroke="#607D8B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
</svg>
