crates/mdfx/src/renderer/svg/snapshots/mdfx__renderer__svg__tests__sparkline_single_value.snap
---
source: crates/mdfx/src/renderer/svg/mod.rs
expression: render_inline_svg(&primitive)
---
<svg xmlns="http://www.w3.org/2000/svg" width="100" height="20" viewBox="0 0 100 20">
  <polyline points="4.0,16.0" fill="none" stroke="#4CAF50" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
  <circle cx="4.0" cy="16.0" r="3" fill="#4CAF50"/>
</svg>
