crates/mdfx/src/renderer/svg/snapshots/mdfx__renderer__svg__tests__sparkline_with_dots.snap
---
source: crates/mdfx/src/renderer/svg/mod.rs
expression: render_inline_svg(&primitive)
---
<svg xmlns="http://www.w3.org/2000/svg" width="100" height="30" viewBox="0 0 100 30">
  <polyline points="4.0,26.0 27.0,13.4 50.0,19.7 73.0,4.0 96.0,10.3" fill="none" stroke="#FF5722" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
  <circle cx="4.0" cy="26.0" r="3" fill="#FF5722"/>
  <circle cx="27.0" cy="13.4" r="3" fill="#FF5722"/>
  <circle cx="50.0" cy="19.7" r="3" fill="#FF5722"/>
  <circle cx="73.0" cy="4.0" r="3" fill="#FF5722"/>
  <circle cx="96.0" cy="10.3" r="3" fill="#FF5722"/>
</svg>
