crates/mdfx/src/renderer/svg/snapshots/mdfx__renderer__svg__tests__sparkline_with_track.snap
---
source: crates/mdfx/src/renderer/svg/mod.rs
expression: render_inline_svg(&primitive)
---
<svg xmlns="http://www.w3.org/2000/svg" width="100" height="25" viewBox="0 0 100 25">
  <rect width="100" height="25" fill="#F5F5F5"/>
  <polyline points="3.0,22.0 26.5,15.7 50.0,7.2 73.5,13.6 97.0,3.0" fill="none" stroke="#1976D2" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
</svg>
